natgw.tf
resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id = aws_subnet.public-sub2.id
  tags = {
    Name = "natgw"
  } 
}

resource "aws_eip" "nat_eip" {
  tags = {
    Name = "nat-eip"
  }
}
